[package]
name = "luar-lsp-server"
version = "0.1.0"
edition = "2021"
description = "Rust language-server backend for LUAR (diagnostics + semantic tokens)."

[[bin]]
name = "luar-lsp-server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
luar = { path = "../../Luar" }

[profile.release]
opt-level = 2
